--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,7 +7,11 @@
     "dev": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "vitest",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:vitest": "vitest",
+    "docs": "typedoc",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
@@ -22,13 +26,17 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dataloader": "^2.2.3",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "reflect-metadata": "^0.2.0",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
   },
@@ -36,13 +44,17 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.8",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
+    "ts-jest": "^29.1.1",
     "tsx": "^4.7.0",
+    "typedoc": "^0.25.4",
     "typescript": "^5.3.2",
     "vitest": "^1.0.0"
   }
