添加桥接功能、平台适配层和同步管理器

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4020920240930001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020920240930001",
     "@types/node": "^20.10.0",
+    "@types/wechat-miniprogram": "^3.4.9",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
